<package>
  <name>ecto_openni</name>
  <version>0.3.7</version>
  <description>Ecto bindings for the openni sensor.</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://ecto.willowgarage.com</url>

  <build_depend>boost</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>libopenni-dev</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>libusb-1.0-dev</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>libopenni-dev</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
