<package>
  <name>ecto_openni</name>
  <version>0.4.0</version>
  <description>Ecto bindings for the openni sensor.</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://plasmodic.github.io/ecto_openni</url>

  <build_depend>boost</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libopenni-dev</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>libusb-1.0-dev</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>libopenni-dev</run_depend>

  <test_depend>rosunit</test_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
